--- a/CGPT_PAGE.html
+++ b/CGPT_PAGE.html
@@ -145,7 +145,7 @@
 <script type="text/javascript">
 (function(){
   emailjs.init({
-    publicKey: "YOUR_PUBLIC_KEY",
+    publicKey: "IqX1JlkCB1GL-tFVm",
   });
 })();
 </script>
